# laverne_police_log_dashboard

./: .gitignore  README.md  app.py  daily_logs.csv  daily_logs_geocoded.csv  pyproject.toml
.streamlit/: config.toml
police_logs_dashboard_work/: app_color_fix.patch  lvpd_scrape_daily_logs.py  run_pipeline.py  transform_and_geocode.py
police_logs_dashboard_work/output/: daily_logs.csv  daily_logs_geocoded.csv  geocode_cache.json  raw_scraped.csv
scripts/: add_grouped_nature.py  geocode_census_fallback.py  geocode_neighborhoods.py
