[project]
name = "police-logs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "geopy>=2.4.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydeck>=0.9.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
